ensure that the curator selct of an orcid search result does not update the contributor orcid search result and added some spacing to the orcid search button and input field

--- a/src/main/webapp/css/igsn30.css
+++ b/src/main/webapp/css/igsn30.css
@@ -100,7 +100,12 @@ fieldset.show-fieldset-borders{
 .hasEvent{
 	cursor: pointer; 
 }
-
+.contrib_orcid_search_div{
+  padding-top:5px;
+}
+.orcid_search{
+  margin-top:5px;
+}
 /* Animation */
 
 @-webkit-keyframes spinner {
